themes/Adwaita/gtk-3.0/gtk-widgets.css
/* ... */
/****************
 * Text Entries *
 ****************/
.entry {
    border-style: solid;

    /* we use inner-border instead of padding because padding
     * also applies to the progressbar.
     */
    padding: 0;
    -GtkEntry-inner-border: 5;
    -GtkEntry-progress-border: 0;

    /* border-image defined in the -assets variants */

    color: @entry_text_color;
}

.entry:focus {
    box-shadow: 1 1 inset alpha(@theme_selected_bg_color, 0.2), -1 -1 inset alpha(@theme_selected_bg_color, 0.2);
}

.entry.progressbar {
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;

    /* border-image defined in -assets variant */

    -adwaita-progressbar-pattern: none;
}

/*******************
 * Symbolic images *
 *******************/
.image {
    color: @internal_element_color;
}

.image:hover {
    color: @internal_element_prelight;
}


/*****************
 * GtkSpinButton *
 *****************/
.spinbutton .button {
    color: @internal_element_color;
    padding: 2 6;
}

.spinbutton .button,
.spinbutton .button:hover,
.spinbutton .button:active,
.spinbutton .button:focus,
.spinbutton .button:insensitive,
.spinbutton .button:window-unfocused {
    border-width: 0 1;
    border-radius: 0;
    border-style: solid;
    border-image: none;

    box-shadow: none;
}

.spinbutton .button,
.spinbutton .button:hover,
.spinbutton .button:active,
.spinbutton .button:focus,
.spinbutton .button:insensitive {
    border-color: @inset_dark_color;
}

.spinbutton .button:window-unfocused {
    border-color:  @inset_dark_color; /* FIXME */
}

.spinbutton .button,
.spinbutton .button:hover,
.spinbutton .button:focus,
.spinbutton .button:insensitive,
.spinbutton .button:window-unfocused {
    background-color: transparent;
    background-image: none;
}

.spinbutton .button:insensitive {
    color: @internal_element_insensitive;
}

.spinbutton .button:active,
.spinbutton .button:hover {
    color: @internal_element_prelight;
}

.spinbutton .button:first-child,
.spinbutton .button:first-child:hover,
.spinbutton .button:first-child:active,
.spinbutton .button:first-child:focus,
.spinbutton .button:first-child:insensitive,
.spinbutton .button:first-child:window-unfocused {
    border-left-width: 0;
    border-radius: 2 0 0 2;
}

.spinbutton .button:last-child,
.spinbutton .button:last-child:hover,
.spinbutton .button:last-child:active,
.spinbutton .button:last-child:focus,
.spinbutton .button:last-child:insensitive,
.spinbutton .button:last-child:window-unfocused {
    border-width: 0;
    border-radius: 0 2 2 0;
}

/* Add back the glowy effect from the entry covered by the pushed button background*/
.spinbutton .button:active {
    box-shadow: 0 1 inset alpha(@theme_selected_bg_color, 0.2), 0 -1 inset alpha(@theme_selected_bg_color, 0.2);
}

.spinbutton .button:first-child:active {
    box-shadow: 1 1 inset alpha(@theme_selected_bg_color, 0.2), 0 -1 inset alpha(@theme_selected_bg_color, 0.2);
}

.spinbutton .button:last-child:active {
    box-shadow: 0 1 inset alpha(@theme_selected_bg_color, 0.2), -1 -1 inset alpha(@theme_selected_bg_color, 0.2);
}


/****************
 * Progress bar *
 ****************/

/* progress component */
.progressbar,
.progressbar row,
.progressbar row:hover,
.progressbar row:selected,
.progressbar row:selected:focus {
    background-image: -gtk-gradient (linear,
                                     left top, left bottom,
                                     from (@progressbar_background_a),
                                     color-stop (0.75, @progressbar_background_b),
                                     to (shade(@progressbar_background_a, 0.85)));

    border-radius: 3;
    border-width: 1;
    border-style: solid;
    border-color: @progressbar_border;
    box-shadow: 1 1 alpha(white, 0.2) inset, -1 -1 alpha(white, 0.1) inset;

    -adwaita-progressbar-pattern: -gtk-gradient (linear,
                                                 left top, right bottom,
                                                 from (alpha (@progressbar_pattern, 0.00)),
                                                 color-stop (0.49, alpha (@progressbar_pattern, 0.00)),
                                                 color-stop (0.50, alpha (@progressbar_pattern, 0.25)),
                                                 to (alpha (@progressbar_pattern, 0.25)));
}

.progressbar.vertical {
    background-image: -gtk-gradient (linear,
                                     left top, right top,
                                     from (@progressbar_background_a),
                                     color-stop (0.75, @progressbar_background_b),
                                     to (shade(@progressbar_background_a, 0.85)));

    -adwaita-progressbar-pattern: -gtk-gradient (linear,
                                                 left bottom, right top,
                                                 from (alpha (@progressbar_pattern, 0.00)),
                                                 color-stop (0.49, alpha (@progressbar_pattern, 0.00)),
                                                 color-stop (0.50, alpha (@progressbar_pattern, 0.25)),
                                                 to (alpha (@progressbar_pattern, 0.25)));
}

.progressbar:window-unfocused,
.progressbar row:window-unfocused,
.progressbar row:selected:window-unfocused {
    -adwaita-progressbar-pattern: none;
    background-image: none;
    background-color: @theme_unfocused_selected_bg_color;
    border-color: @theme_unfocused_selected_bg_color;
    box-shadow: none;
    -adwaita-progressbar-pattern: none;
}

/* through component */
GtkProgressBar,
.trough row {
    padding: 0 0 1 0;
    -GtkProgressBar-xspacing: 20;
    -GtkProgressBar-yspacing: 20;
}
/* ... */

